--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.0",
         "laravel/sanctum": "^2.1",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.0",
         "pusher/pusher-php-server": "^4.1"
     },
     "require-dev": {
